# ai-mock-interviewer

./: .env  Dockerfile  Jenkinsfile  README.md  llm_feedback_generator.py  llm_parser.py  llm_question_generator.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
jenkins-docker/: Dockerfile
static/css/: output.css
templates/: dashboard.html  file_uploader.html  interview.html
